# C_matrix_sort

./: CMakeLists.txt  README.md  main.c
lib/: matrixlib.h  staticlib.h
